[package]
name = "rcc"
version = "0.1.0"
authors = ["Taiki Harada <haradataiki19990927@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcc_parser = {path = "rcc_parser"}
rcc_codegen = {path = "rcc_codegen"}

clap = "2.33.3"
