[package]
name = "rcc_compiler"
version = "0.1.0"
authors = ["Taiki Harada <haradataiki19990927@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcc_parser = {path = "../rcc_parser"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }